--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <div class="container-fluid">
-  <h1 style="color:black">Javahome Webhook demo..hoe</h1>
+  <h1 style="color:black">Welcome to PDAPI web application</h1>
 </div>
 
 </body>
